# kna-history

./: .env-example  .env.development  .gitignore  Dockerfile  README.md  app.py  build.sh  build_app.sh  create-certificates.sh  docker-compose.dev.yml  docker-compose.yml  env.example  mkdocs.yml  pyproject.toml  requirements.txt  setup-dev-environment.sh
.github/workflows/: GITHUB_ACTIONS.md  build-release.yml  build-test.yml  ci-tests.yml
app/: Dockerfile  app.py  data_reader.py  data_reader_test.py  requirements.txt  test.py
app/templates/: about.html  foto.html  home.html  image.html  jaren.html  layout.html  leden.html  lid_fotos.html  lid_media.html  pdf.html  tijdslijn.html  video.html  voorstelling_fotos.html  voorstelling_media.html  voorstellingen copy.html  voorstellingen.html
data_loader/: kna_database.xlsx  load_data.py
deploy/: .env.production  .gitignore  DEPLOYMENT_GUIDE.md  HEALTH_CHECK.md  README.md  build-local.sh  docker-compose.certbot-initial.yml  docker-compose.yml  env.example  setup-certificates.sh  start.sh  status.sh  update.sh  validate-config.sh
deploy/app/: Dockerfile
deploy/certbot-auto/: Dockerfile
deploy/certbot-initial/: Dockerfile
deploy/ngnix/: Dockerfile
docker/: Dockerfile
docs/: README.md  index.md  mkdocs.yml
docs/deployment/: backup.md  configuration.md  deployment-guide.md  monitoring.md  production.md  quick-start.md  troubleshooting.md  updates.md
docs/developer-guide/: api-reference.md  architecture.md  configuration.md  database.md  setup.md
src/: app.py  cli.py  data_reader_test.py  test.py
(+63 files in other folders)
